--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,7 +7,7 @@
   --color-orange-yellow: #be4f0c;
 
   /* Size */
-  --body-width: 1080px;
+  --body-width: 1400px;
 }
 
 * {
@@ -57,13 +57,82 @@ body {
   text-decoration: none;
 }
 
-/* Main Section */
+/* Main Section Backgroudn Picture*/
+#mainBackground {
+  position: relative;
+  margin-bottom: 10vh;
+}
+
 #mainBackgroundImg {
   width: 100%;
   max-width: var(--body-width);
   filter: blur(4px) grayscale(100%) opacity(40%);
 }
 
+#span1 {
+  position: absolute;
+  top: 150px;
+  left: 5%;
+  color: var(--color-white);
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 55px;
+}
+
+#span2 {
+  position: absolute;
+  top: 230px;
+  left: 5%;
+  color: #ffffff;
+  font-size: 75px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+#span3 {
+  position: absolute;
+  top: 340px;
+  left: 5%;
+  color: var(--color-white);
+  font-size: 45px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+#mainBackgroundBtn {
+  position: absolute;
+  top: 440px;
+  left: 5%;
+  font-size: 16px;
+  padding: 15px 20px;
+  border-radius: 35px;
+  background-color: var(--color-white);
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.4s;
+}
+
+#mainBackgroundBtn:hover {
+  background-color: var(--color-light-orange);
+  font-weight: bold;
+}
+
+#mainBackgroundBtn:focus {
+  outline: none;
+}
+
+#mainBackgroundBtn a {
+  color: var(--color-dark-grey);
+  font-weight: bold;
+  text-decoration: none;
+  transition: color 0.4s;
+}
+
+#mainBackgroundBtn:hover a {
+  color: #fff;
+}
+
+/* Introduction */
 #mainAboutMe {
   border: blue 5px solid;
   color: var(--color-white);
