--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,16 +14,25 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  cursor: default;
 }
 
-a {
+a,
+i,
+button {
+  cursor: pointer;
 }
 
 body {
-  background-color: var(--color-dark-grey);
+  /* background-color: var(--color-dark-grey); */
+
   max-width: var(--body-width);
   font-family: "Times New Roman", Times, serif;
   padding: 0px 25px;
+  text-align: center;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
 }
 
 #headerGNV {
@@ -31,13 +40,22 @@ body {
   justify-content: space-between;
   align-items: center;
   color: var(--color-white);
-  margin: 25px 32px;
+  margin: 35px 32px 5vh 32px;
 }
 
 #headerLogo {
   font-size: 32px;
   padding: 5px 10px;
   border: var(--color-white) 2px solid;
+  transition: color 1s, border 1s;
+}
+
+#headerLogo:hover {
+  font-size: 32px;
+  color: var(--color-deep-orange);
+  padding: 5px 10px;
+  border: var(--color-deep-orange) 2px solid;
+  cursor: default;
 }
 
 #headerMenu > ul {
@@ -47,14 +65,18 @@ body {
 #headerMenu > ul > li {
   color: var(--color-white);
   margin: 0px 24px;
-  font-size: 18px;
+  font-size: 24px;
   list-style: none;
 }
 
-#headerMenu > ul > li > a,
-#headerMenu > ul > li > a:hover {
+#headerMenu > ul > li > a {
   color: var(--color-white);
   text-decoration: none;
+  transition: color 1s;
+}
+
+#headerMenu > ul > li > a:hover {
+  color: var(--color-deep-orange);
 }
 
 /* Main Section Backgroudn Picture*/
@@ -65,14 +87,14 @@ body {
 
 #mainBackgroundImg {
   width: 100%;
-  max-width: var(--body-width);
+  max-width: calc(var(--body-width) * 0.75);
   filter: blur(4px) grayscale(100%) opacity(40%);
 }
 
 #span1 {
   position: absolute;
   top: 150px;
-  left: 5%;
+  left: 12%;
   color: var(--color-white);
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
@@ -82,7 +104,7 @@ body {
 #span2 {
   position: absolute;
   top: 230px;
-  left: 5%;
+  left: 12%;
   color: #ffffff;
   font-size: 75px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
@@ -92,7 +114,7 @@ body {
 #span3 {
   position: absolute;
   top: 340px;
-  left: 5%;
+  left: 12%;
   color: var(--color-white);
   font-size: 45px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
@@ -102,7 +124,7 @@ body {
 #mainBackgroundBtn {
   position: absolute;
   top: 440px;
-  left: 5%;
+  left: 12%;
   font-size: 16px;
   padding: 15px 20px;
   border-radius: 35px;
@@ -132,8 +154,145 @@ body {
   color: #fff;
 }
 
-/* Introduction */
+/* Introduction */ /* Introduction */ /* Introduction */ /* Introduction */ /* Introduction */
+
+#introTitle {
+  color: var(--color-white);
+  margin-bottom: 48px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-weight: bold;
+}
+
+#introMainTitle {
+  font-size: 28px;
+}
+
+#introSubTitle {
+  color: var(--color-deep-orange);
+  font-size: 48px;
+}
+
 #mainAboutMe {
   border: blue 5px solid;
   color: var(--color-white);
+}
+
+/* About Me */
+#aboutMeBody {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#intro {
+  display: flex;
+  width: 100%;
+  max-width: calc(var(--body-width) * 0.75);
+  padding: 40px 50px;
+  border: var(--color-white) 3px solid;
+  transition: border 1s;
+}
+
+#intro:hover {
+  border: var(--color-orange-yellow) 3px solid;
+}
+
+#introImg {
+  width: 250px;
+  height: 250px;
+  margin-right: 30px;
+  border: var(--color-orange-yellow) 2px solid;
+}
+
+#introText {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  text-align: left;
+  color: var(--color-white);
+  font-size: 24px;
+}
+
+.fab {
+  font-size: 32px;
+  margin-top: 32px;
+  margin-right: 15px;
+  color: var(--color-white);
+  transition: color 1s;
+}
+
+.fab:hover {
+  color: var(--color-deep-orange);
+}
+
+#introMsg,
+#introPhone {
+  text-align: left;
+  margin-top: 32px;
+  color: var(--color-white);
+  font-size: 20px;
+  transition: color 1s;
+}
+
+#introMsg:hover,
+#introPhone:hover {
+  color: var(--color-deep-orange);
+}
+
+.fas {
+  margin-right: 12px;
+}
+
+.introCVBtn {
+  padding: 15px 25px;
+  margin-top: 32px;
+  margin-right: 12px;
+  background-color: transparent;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  color: var(--color-white);
+  border: var(--color-white) 1px solid;
+  transition: color 1s, border 1s;
+}
+
+.introCVBtn:hover {
+  cursor: pointer;
+  color: var(--color-light-orange);
+  border: var(--color-light-orange) 1px solid;
+}
+
+.introCVBtn:focus {
+  background-color: var(--color-orange-yellow);
+  outline: none;
+}
+
+/* Intro_SEE */ /* Intro_SEE */ /* Intro_SEE */ /* Intro_SEE */ /* Intro_SEE */
+#aboutMeSEE {
+  display: flex;
+  margin-top: 128px;
+}
+
+.aboutMeSEEBtn {
+  margin: 0px 18px;
+}
+
+.aboutMeSEEBtn button {
+  padding: 10px 18px;
+  background-color: transparent;
+  color: var(--color-white);
+  border: var(--color-white) 1px solid;
+  border-radius: 24px;
+  font-size: 18px;
+  transition: border 1s, color 1s;
+}
+
+.aboutMeSEEBtn button:hover {
+  border: var(--color-deep-orange) 1px solid;
+  color: var(--color-deep-orange);
+}
+
+.aboutMeSEEBtn button:focus {
+  background-color: var(--color-orange-yellow);
+  outline: none;
 }
