--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -24,8 +24,7 @@ button {
 }
 
 body {
-  /* background-color: var(--color-dark-grey); */
-
+  background-color: var(--color-dark-grey);
   max-width: var(--body-width);
   font-family: "Times New Roman", Times, serif;
   padding: 0px 25px;
@@ -191,7 +190,7 @@ body {
   max-width: calc(var(--body-width) * 0.75);
   padding: 40px 50px;
   border: var(--color-white) 3px solid;
-  transition: border 1s;
+  transition: border 0.5s;
 }
 
 #intro:hover {
@@ -218,7 +217,7 @@ body {
   margin-top: 32px;
   margin-right: 15px;
   color: var(--color-white);
-  transition: color 1s;
+  transition: color 0.5s;
 }
 
 .fab:hover {
@@ -231,7 +230,7 @@ body {
   margin-top: 32px;
   color: var(--color-white);
   font-size: 20px;
-  transition: color 1s;
+  transition: color 0.5s;
 }
 
 #introMsg:hover,
@@ -253,7 +252,7 @@ body {
   font-size: 18px;
   color: var(--color-white);
   border: var(--color-white) 1px solid;
-  transition: color 1s, border 1s;
+  transition: color 0.5s, border 0.5s;
 }
 
 .introCVBtn:hover {
@@ -284,7 +283,7 @@ body {
   border: var(--color-white) 1px solid;
   border-radius: 24px;
   font-size: 18px;
-  transition: border 1s, color 1s;
+  transition: border 0.5s, color 0.5s;
 }
 
 .aboutMeSEEBtn button:hover {
@@ -300,10 +299,8 @@ body {
 /* SkillCards */
 #aboutMeSkill {
   display: block;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   color: var(--color-white);
-  font-size: 32px;
+  font-size: 24px;
   margin-top: 40px;
   width: 1100px;
 }
@@ -317,17 +314,142 @@ body {
 .aboutMeSkillLan {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 15px;
 }
 
 .aboutMeSkillBar {
   background-color: var(--color-white);
+  border-radius: 10px;
   width: 350px;
-  height: 40px;
+  height: 30px;
 }
 
 .aboutMeSkillBarPercent {
+  border-radius: 10px;
   background-color: var(--color-deep-orange);
   height: 100%;
+}
+
+/* About Me Experience */
+.aboutMeExpCard {
+  display: flex;
+  margin-top: 80px;
+  padding: 18px;
+  width: calc(var(--body-width) * 0.75);
+  color: var(--color-white);
+  border: var(--color-white) 2px solid;
+  background-color: var(--color-dark-grey);
+  transition: border 0.5s;
+}
+
+.aboutMeExpCard:hover {
+  border: var(--color-orange-yellow) 2px solid;
+}
+
+.aboutMeExpCard:hover .aboutMeExpCompany {
+  color: var(--color-deep-orange);
+}
+
+.aboutMeExpCard:hover .aboutMeExpPosition {
+  color: var(--color-light-orange);
+}
+
+.aboutMeExpTitle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 300px;
+  margin-right: 32px;
+}
+
+.aboutMeExpCompany {
+  /* color: var(--color-deep-orange); */
+  font-size: 32px;
+  font-weight: bold;
+  transition: color 0.5s;
+}
+
+.aboutMeExpPosition {
+  margin-top: 8px;
+  font-size: 20px;
+  transition: color 0.5s;
+}
+
+.aboutMeExpLocaiton {
+  margin-top: 8px;
+  font-size: 16px;
+}
+
+.aboutMeExpContent {
+  display: block;
+  text-align: left;
+  width: 700px;
+}
+
+.aboutMeExpContent ul > li {
+  margin: 6px 0px;
+  font-size: 16px;
+}
+
+/* SEE Education */ /* SEE Education */ /* SEE Education */ /* SEE Education */ /* SEE Education */
+#aboutMeEducation {
+  display: flex;
+  margin-top: 120px;
+}
+
+.aboutMeEduTitle {
+  color: var(--color-white);
+  font-size: 36px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.aboutMeEduCard {
+  display: flex;
+  width: 450px;
+  height: 200px;
+  justify-content: center;
+  align-items: center;
+  margin: 36px 54px;
+}
+
+.eduLogo {
+  /* background-color: whitesmoke; */
+  border-radius: 10%;
+  height: 120px;
+  width: 120px;
+  margin-right: 36px;
+}
+
+.aboutMeEduContent {
+  display: block;
+  color: var(--color-white);
+  font-size: 20px;
+}
+
+.aboutMeEduDeContentUniv,
+.aboutMeEduCeContentUniv {
+  font-size: 24px;
+  margin: 15px 0px;
+  font-weight: bold;
+  transition: color 0.5s;
+}
+
+.aboutMeEduDeContentTitle,
+.aboutMeEduCeContentTitle {
+  font-family: "Times New Roman", Times, serif;
+  font-style: italic;
+  font-size: 20px;
+  margin: 15px 0px;
+  transition: color 0.5s;
+}
+
+#aboutMeEduDegree:hover .aboutMeEduDeContentUniv {
+  color: var(--color-light-orange);
+}
+
+#aboutMeEduCert:hover .aboutMeEduCeContentUniv {
+  color: var(--color-light-orange);
 }
 
 /* footer */ /* footer */ /* footer */ /* footer */ /* footer */ /* footer */
