--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -328,6 +328,13 @@ body {
   border-radius: 10px;
   background-color: var(--color-deep-orange);
   height: 100%;
+  animation: skillBarFillUp 2s;
+}
+
+@keyframes skillBarFillUp {
+  from {
+    width: 0%;
+  }
 }
 
 /* About Me Experience */
@@ -450,6 +457,27 @@ body {
 
 #aboutMeEduCert:hover .aboutMeEduCeContentUniv {
   color: var(--color-light-orange);
+}
+
+/* Portfolio */ /* Portfolio */ /* Portfolio */ /* Portfolio */ /* Portfolio */ /* Portfolio */ /* Portfolio */
+#pfSection {
+  display: flex;
+}
+
+.pfCard {
+  border: var(--color-white) 1px solid;
+  width: fit-content;
+}
+
+.pfImg {
+  width: 300px;
+  height: 300px;
+}
+
+.pfTitle {
+  margin-top: 12px;
+  color: var(--color-white);
+  font-size: 24px;
 }
 
 /* footer */ /* footer */ /* footer */ /* footer */ /* footer */ /* footer */
