--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -155,7 +155,7 @@ body {
 
 /* Introduction */ /* Introduction */ /* Introduction */ /* Introduction */ /* Introduction */
 
-#introTitle {
+.introTitle {
   color: var(--color-white);
   margin-bottom: 48px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
@@ -163,11 +163,11 @@ body {
   font-weight: bold;
 }
 
-#introMainTitle {
+.introMainTitle {
   font-size: 28px;
 }
 
-#introSubTitle {
+.introSubTitle {
   color: var(--color-deep-orange);
   font-size: 48px;
 }
@@ -460,24 +460,64 @@ body {
 }
 
 /* Portfolio */ /* Portfolio */ /* Portfolio */ /* Portfolio */ /* Portfolio */ /* Portfolio */ /* Portfolio */
+
+#portfolioBody {
+  margin-top: 150px;
+}
+
 #pfSection {
-  display: flex;
+  display: inline-grid;
+  grid-template-columns: repeat(auto-fit, 250px);
+  min-width: calc(var(--body-width) * 0.65);
+  grid-gap: 10px;
 }
 
 .pfCard {
-  border: var(--color-white) 1px solid;
-  width: fit-content;
+  position: relative;
+  width: 250px;
 }
 
 .pfImg {
-  width: 300px;
-  height: 300px;
+  width: 250px;
 }
 
 .pfTitle {
-  margin-top: 12px;
-  color: var(--color-white);
+  position: absolute;
+  top: 0%;
+  width: 250px;
+  height: 250px;
+  background-color: #ffffff;
+  opacity: 0.9;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 24px;
+}
+
+.pfProject {
+  margin-top: 55px;
+}
+
+.pfLang {
+  margin-top: 5px;
+  color: var(--color-light-orange);
+}
+
+.pfBtn {
+  margin-top: 35px;
+  background-color: transparent;
+  font-weight: bold;
+  border: var(--color-light-orange) 2px solid;
+  padding: 10px 20px;
+  transition: background-color 0.5s, color 0.5s;
+}
+
+.pfBtn:hover {
+  color: #ffffff;
+  background-color: var(--color-light-orange);
+}
+
+.pfBtn:focus {
+  outline: none;
 }
 
 /* footer */ /* footer */ /* footer */ /* footer */ /* footer */ /* footer */
