--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -23,21 +23,29 @@ button {
   cursor: pointer;
 }
 
+main {
+  padding-top: 60px;
+}
+
 body {
   background-color: var(--color-dark-grey);
   max-width: var(--body-width);
   font-family: "Times New Roman", Times, serif;
   padding: 0px 25px;
   text-align: center;
-  /* display: flex;
-  flex-direction: column;
-  align-items: center; */
+}
+
+#gnv {
+  position: sticky;
+  top: 0px;
+  background-color: var(--color-dark-grey);
 }
 
 #headerGNV {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 3;
   color: var(--color-white);
   margin: 35px 32px 5vh 32px;
 }
@@ -80,6 +88,7 @@ body {
 
 /* Main Section Backgroudn Picture*/
 #mainBackground {
+  z-index: -1;
   position: relative;
   margin-bottom: 10vh;
 }
@@ -478,11 +487,13 @@ body {
 }
 
 .pfImg {
+  z-index: 2;
   width: 250px;
 }
 
 .pfTitle {
   position: absolute;
+  z-index: 1;
   top: 0%;
   width: 250px;
   height: 250px;
@@ -521,7 +532,83 @@ body {
   outline: none;
 }
 
+/* Contact Me Page */ /* Contact Me Page */ /* Contact Me Page */ /* Contact Me Page */ /* Contact Me Page */
+#contactBody {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 200px;
+}
+
+#contactMeSubmit {
+  min-width: calc(var(--body-width) * 0.65);
+}
+
+#contactMeUserInput {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#contactMeName,
+#contactMeEmail {
+  margin-bottom: 6px;
+  font-size: 20px;
+  height: 36px;
+  width: 400px;
+}
+
+#contactMeMsg {
+  font-size: 20px;
+  height: 300px;
+  width: 400px;
+}
+
+#contactMeBtn {
+  margin-top: 25px;
+  padding: 10px 20px;
+  border: var(--color-white) 2px solid;
+  background-color: transparent;
+  color: var(--color-white);
+  font-size: 18px;
+  transition: background-color 0.5s, border 0.5s, color 0.5s;
+}
+
+#contactMeBtn:hover {
+  background-color: var(--color-deep-orange);
+  border: var(--color-deep-orange) 2px solid;
+  color: #ffffff;
+}
+
+#contactMeBtn:focus {
+  outline: none;
+}
+
 /* footer */ /* footer */ /* footer */ /* footer */ /* footer */ /* footer */
 footer {
-  height: 250px;
+  margin-top: 300px;
+  height: 150px;
+  width: 100%;
+}
+
+#footerSNS > ul {
+  display: flex;
+  justify-content: center;
+}
+
+#footerSNS > ul > li {
+  margin: 0px 25px;
+}
+
+#footerMark {
+  margin-top: 38px;
+  font-size: 18px;
+  color: #ffffff;
+  transition: color 2s;
+}
+
+#footerMark:hover {
+  color: var(--color-deep-orange);
 }
