--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,6 +19,9 @@
 
 html {
   scroll-behavior: smooth;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 a,
@@ -245,6 +248,11 @@ body {
   color: var(--color-white);
   font-size: 20px;
   transition: color 0.5s;
+}
+
+#introMsg > i,
+#introPhone > i {
+  cursor: default;
 }
 
 #introMsg:hover,
